--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/ludaalt/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/ludaalt/frontend-project-lvl1/actions)",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +18,6 @@
   "bugs": {
     "url": "https://github.com/ludaalt/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/ludaalt/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/ludaalt/frontend-project-lvl1#readme",
+  "type": "module"
 }
