add fourth step

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "homepage": "https://github.com/ludaalt/frontend-project-lvl1#readme",
   "type": "module",
   "dependencies": {
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "install": "^0.13.0",
     "npm": "^6.14.9",
     "readline-sync": "^1.4.10"
