--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,24 +1,8 @@
----
-
-plugins:
-  # https://github.com/jest-community/eslint-plugin-jest
-  - jest
-
-# https://eslint.org/docs/user-guide/configuring#specifying-environments
 env:
-  node: true
-  es2020: true
-
-extends:
-  - 'airbnb-base'
-  - 'plugin:jest/recommended'
-
+  browser: true
+  es2021: true
+extends: airbnb-base
 parserOptions:
   ecmaVersion: 11
   sourceType: module
-
-rules:
-  no-console: 0
-  import/extensions: 0 # FIXME: remove when rule will be adjusted for new nodejs version
-  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
-  no-await-in-loop: 0
+rules: { no-console: 0, import/extensions: 0 }
