--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,9 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "@jest/globals": "^29.6.0",
+    "jest": "^29.6.0",
+    "jest-cli": "^29.6.0"
   }
 }
